--- a/globs/bibliography.bib
+++ b/globs/bibliography.bib
@@ -49,6 +49,13 @@
     year = {2007}
 }
 
+@misc{urirfc,
+    author = {Berners-Lee, Tim and Fielding, Roy and Masinter, Larry},
+    title = {RFC 3986: Uniform Resource Identifier (URI): Generic Syntax},
+    howpublished = {\url{https://datatracker.ietf.org/doc/html/rfc3986}},
+    year = {2005}
+}
+
 @misc{pathescape,
     author = {NIST},
     title = {{CVE-2022-46171}},
